spec/fixtures/modules/error/plans/run_fail.pp
plan error::run_fail(
  String $target
) {
 run_task('error::fail', $target)
}
